fix alignment of icon with text

--- a/packages/components/src/components/notification/notification.scss
+++ b/packages/components/src/components/notification/notification.scss
@@ -49,7 +49,7 @@
   & .ifx-notification__icon {
     margin-right: tokens.$ifxSpace100;
     display: flex;
-    align-self: flex-start;
+    align-self: center;
   }
 
   & .ifx-notification__body {
